finished password reset links

--- a/backend/app/templates/login.html
+++ b/backend/app/templates/login.html
@@ -10,5 +10,9 @@
         </div>
         <br>
         <p>New User? <a href="{{ url_for('main.register') }}">Click to Register!</a></p>
+	<p>
+		Forgot Your Password?
+		<a href="{{ url_for('main.reset') }}">Click to Reset it</a>
+	</p>
 
 {% endblock %}
